add some questions for interview